// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-send should send reply correctly 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{946A98B60000000000000000}",
            "type": "cell",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQDeZAF9cF8xGHxYS6wD5ecWLnlAfTFfru2tXgpO69Wa0-fN",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 8035n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Deploy success",
              "type": "text",
            },
            "to": null,
            "type": "external-out",
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-send should send reply correctly 2`] = `
[
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Hello",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQDeZAF9cF8xGHxYS6wD5ecWLnlAfTFfru2tXgpO69Wa0-fN",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 7758n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "World",
              "type": "text",
            },
            "bounce": true,
            "from": "kQDeZAF9cF8xGHxYS6wD5ecWLnlAfTFfru2tXgpO69Wa0-fN",
            "to": "@treasure(treasure)",
            "type": "internal",
            "value": 9991070000n,
          },
        ],
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Something",
              "type": "text",
            },
            "to": null,
            "type": "external-out",
          },
        ],
      },
    ],
  },
]
`;
